refactor(search): extract shared query builders in KoreanSearchService
searchKoreanContent/searchWithNgram/searchWithFilters duplicated the
multi-match build, the chatRoomId match filter (same 8-line comment 3x), the
SearchRequest assembly, hit→Page mapping, and the try/catch→SearchException.
Extract standardMultiMatch/ngramMultiMatch/applyRoomFilter/executeAndMap.
Emitted ES query DSL, sort, from/size, minScore, highlight, and error message
are byte-identical — pure refactor. Adds the first real query-building tests.

Constraint: behavior byte-identical (characterization tests capture the SearchRequest); public signatures unchanged
Rejected: keep inline query building | 3x duplication across 262 LOC, especially the 8-line match-vs-term comment
Confidence: high
Scope-risk: moderate (internal refactor of the search query layer)
Not-tested: debug-level highlight log dropped (pure side effect, no behavioral impact)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>